navbar some add

--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
         </ul>
 
         <ul class="btn">
-            <li><a href="#">
-                <i class="fab fa-twitter"></i>
-            </a></li>
-            <li><a href="#">
-                <i class="fab fa-facebook"></i>
-            </a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
         </ul>
 
     </div>
 
-    <div class="toggle">
+    <a href="#" class="toggle">
         <i class="fas fa-bars"></i>
-    </div>
+    </a>
 </html>
